<resources>
    <string name="app_name">Praktikum App F1</string>
    <string name="title_home">Home</string>
    <string name="title_race">Race</string>
    <string name="title_profile">Profile</string>
    <string name="more_info_btn">Check it out!</string>
    <string name="creator_name">Ibrahim Nur Huda</string>
    <string name="creator_NIM">L0122076</string>
    <string name="creator_prodi">Informatika, 22</string>
    <string name="creator_fakultas">Fakultas Teknologi Informasi dan Sains Data</string>
    <string name="creator_univ">Universitas Sebelas Maret</string>
    <string name="creator_email">ibrahimnrhd@student.uns.ac.id</string>
    <string name="home_event_title">Home</string>
    <string name="home_event_desc">
        A one stop schedule app to track all the Formula 1 events of the year for the year of 2024. This app includes
        info for all 24 races from the rounds, name, date, image of the track, brief description, and a button
        that links to the Formula 1 website for even more details about the Grand Prix history, statistics,
        former winner, former pole positions, etc.
    </string>
    <string name="home_event_app_title">F1 Schedule 2024 Season App</string>
    <string name="home_event_briefDesc">More info about Formula 1 2024 Season!</string>
    <string name="fav_circuit_title"><b>My Favorite Circuit</b></string>
    <string name="fav_circuit_name">Spa-Francorchamps</string>
    <string name="fav_circuit_desc"><b>Circuit de Spa-Francorchamps</b>\n
        (French pronunciation: [siʁkɥi də spa fʁɑ̃kɔʁʃɑ̃]), informally referred to as Spa,[1][2] is a 7.004 km (4.352 mi)
        motor-racing circuit located in Francorchamps, Stavelot, Wallonia, Belgium, about 8 km (5.0 mi) southeast of Spa.
        It is the current venue of the Formula One Belgian Grand Prix, hosting its first Grand Prix in 1925, and has held
        a Grand Prix every year since 1985 except 2003 and 2006.
    </string>
    <string name="btnToGithub">My Github!</string>
    <string name="btnToInstagram">My Instagram!</string>
    <string name="btnToShare">Share My Profile!</string>
    <string name="briefDesc">Check out my LinkTree!</string>
    <string name="tv_circuit_name">This is Circuit Name</string>
    <string name="tab_text_1">Calendar</string>
    <string name="tab_text_2">Driver</string>
    <string name="race_name">Nama Balapan</string>
    <string name="description">Deskripsi</string>
    <string name="btnToF1">Check out on formula1.com</string>
    <string name="detailedDescText">
        Using the button below you can find the full weekend schedule, including details of practice and qualifying sessions, support races,
        press conferences and special events, plus the latest news headlines, circuit information and F1 race results.\n\nYou can also find
        broadcast information, with details of how and where you can watch the race on TV by clicking on the button below!
    </string>
    <string-array name="data_name">
        <item>Round 1 - Bahrain Grand Prix</item>
        <item>Round 2 - Saudi Arabian Grand Prix</item>
        <item>Round 3 - Australian Grand Prix</item>
        <item>Round 4 - Japanese Grand Prix</item>
        <item>Round 5 - Chinese Grand Prix</item>
        <item>Round 6 - Miami Grand Prix</item>
        <item>Round 7 - Emilia-Romagna Grand Prix</item>
        <item>Round 8 - Grand Prix De Monaco</item>
        <item>Round 9 - Canadian Grand Prix</item>
        <item>Round 10 - Spanish Grand Prix</item>
        <item>Round 11 - Austrian Grand Prix</item>
        <item>Round 12 - British Grand Prix</item>
        <item>Round 13 - Hungarian Grand Prix</item>
        <item>Round 14 - Belgian Grand Prix</item>
        <item>Round 15 - Dutch Grand Prix</item>
        <item>Round 16 - Italian Grand Prix</item>
        <item>Round 17 - Azerbaijan Grand Prix</item>
        <item>Round 18 - Singapore Grand Prix</item>
        <item>Round 19 - US Grand Prix</item>
        <item>Round 20 - Mexican Grand Prix</item>
        <item>Round 21 - Brazilian Grand Prix</item>
        <item>Round 22 - Las Vegas Grand Prix</item>
        <item>Round 23 - Qatar Grand Prix</item>
        <item>Round 24 - Abu Dhabi Grand Prix</item>
    </string-array>
    <string-array name="data_full_name">
        <item><![CDATA[Formula 1 Gulf Air Bahrain Grand Prix 2024]]></item>
        <item><![CDATA[Formula 1 STC Saudi Arabian Grand Prix 2024]]></item>
        <item><![CDATA[Formula 1 Rolex Australian Grand Prix 2024]]></item>
        <item><![CDATA[Formula 1 MSC Cruises Japanese Grand Prix 2024]]></item>
        <item><![CDATA[Formula 1 Lenovo Chinese Grand Prix 2024]]></item>
        <item><![CDATA[Formula 1 CRYPTO.COM Miami Grand Prix 2024]]></item>
        <item><![CDATA[Formula 1 MSC Cruises Gran Premio Del Made in Italy E Dell\'Emilia-Romagna Grand Prix 2024]]></item>
        <item><![CDATA[Formula 1 Grand Prix De Monaco 2024]]></item>
        <item><![CDATA[Formula 1 AWS Grand Prix Du Canada 2024]]></item>
        <item><![CDATA[Formula 1 Aramco Gran Premio De Espana 2024]]></item>
        <item><![CDATA[Formula 1 Qatar Airways Austrian Grand Prix 2024]]></item>
        <item><![CDATA[Formula 1 Qatar Airways British Grand Prix 2024]]></item>
        <item><![CDATA[Formula 1 Hungarian Grand Prix 2024]]></item>
        <item><![CDATA[Formula 1 Rolex Belgian Grand Prix 2024]]></item>
        <item><![CDATA[Formula 1 Heineken Dutch Grand Prix 2024]]></item>
        <item><![CDATA[Formula 1 Pirelli Gran Premio D\'Italia 2024]]></item>
        <item><![CDATA[Formula 1 Qatar Airways Azerbaijan Grand Prix 2024]]></item>
        <item><![CDATA[Formula 1 Singapore Airlines Singapore Grand Prix 2024]]></item>
        <item><![CDATA[Formula 1 Pirelli United States Grand Prix 2024]]></item>
        <item><![CDATA[Formula 1 Gran Premio De La Ciudad De Mexico 2024]]></item>
        <item><![CDATA[Formula 1 Lenovo Grande Premio De Sao Paulo 2024]]></item>
        <item><![CDATA[Formula 1 Heineken Silver Las Vegas Grand Prix 2024]]></item>
        <item><![CDATA[Formula Qatar Airways Qatar Grand Prix 2024]]></item>
        <item><![CDATA[Formula 1 Etihad Airways Abu Dhabi Grand Prix 2024]]></item>
    </string-array>
    <string-array name="data_date">
        <item>29 Feb - 02 Mar</item>
        <item>07 Mar - 09 Mar</item>
        <item>22 Mar - 24 Mar</item>
        <item>05 Apr - 07 Apr</item>
        <item>19 Apr - 21 Apr</item>
        <item>03 May - 05 May</item>
        <item>17 May - 19 May</item>
        <item>24 May - 26 May</item>
        <item>07 Jun - 09 Jun</item>
        <item>21 Jun - 23 Jun</item>
        <item>28 Jun - 30 Jun</item>
        <item>05 Jul - 07 Jul</item>
        <item>19 Jul - 21 Jul</item>
        <item>26 Jul - 28 Jul</item>
        <item>23 Aug - 25 Aug</item>
        <item>30 Aug - 01 Sep</item>
        <item>13 Sep - 15 Sep</item>
        <item>20 Sep - 22 Sep</item>
        <item>18 Oct - 20 Oct</item>
        <item>24 Oct - 27 Oct</item>
        <item>01 Nov - 03 Nov</item>
        <item>21 Nov - 23 Nov</item>
        <item>29 Nov - 01 Dec</item>
        <item>06 Dec - 08 Dec</item>
    </string-array>
    <string-array name="data_web">
        <item>https://www.formula1.com/en/racing/2024/Bahrain.html</item>
        <item>https://www.formula1.com/en/racing/2024/Saudi_Arabia.html</item>
        <item>https://www.formula1.com/en/racing/2024/Australia.html</item>
        <item>https://www.formula1.com/en/racing/2024/Japan.html</item>
        <item>https://www.formula1.com/en/racing/2024/China.html</item>
        <item>https://www.formula1.com/en/racing/2024/Miami.html</item>
        <item>https://www.formula1.com/en/racing/2024/EmiliaRomagna.html</item>
        <item>https://www.formula1.com/en/racing/2024/Monaco.html</item>
        <item>https://www.formula1.com/en/racing/2024/Canada.html</item>
        <item>https://www.formula1.com/en/racing/2024/Spain.html</item>
        <item>https://www.formula1.com/en/racing/2024/Austria.html</item>
        <item>https://www.formula1.com/en/racing/2024/Great_Britain.html</item>
        <item>https://www.formula1.com/en/racing/2024/Hungary.html</item>
        <item>https://www.formula1.com/en/racing/2024/Belgium.html</item>
        <item>https://www.formula1.com/en/racing/2024/Netherlands.html</item>
        <item>https://www.formula1.com/en/racing/2024/Italy.html</item>
        <item>https://www.formula1.com/en/racing/2024/Azerbaijan.html</item>
        <item>https://www.formula1.com/en/racing/2024/Singapore.html</item>
        <item>https://www.formula1.com/en/racing/2024/United_States.html</item>
        <item>https://www.formula1.com/en/racing/2024/Mexico.html</item>
        <item>https://www.formula1.com/en/racing/2024/Brazil.html</item>
        <item>https://www.formula1.com/en/racing/2024/Las_Vegas.html</item>
        <item>https://www.formula1.com/en/racing/2024/Qatar.html</item>
        <item>https://www.formula1.com/en/racing/2024/United_Arab_Emirates.html</item>
    </string-array>
</resources>