<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.praktikumappf1.bottomnavigations.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    </fragment>
    <fragment
        android:id="@+id/navigation_race"
        android:name="com.example.praktikumappf1.bottomnavigations.ui.race.RaceFragment"
        android:label="@string/title_race"
        tools:layout="@layout/fragment_race">
    </fragment>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.praktikumappf1.bottomnavigations.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_circuitProfileFragment"
            app:destination="@id/circuitProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/circuitProfileFragment"
        android:name="com.example.praktikumappf1.bottomnavigations.ui.profile.CircuitProfileFragment"
        android:label="Ibrahim's LinkTree"
        tools:layout="@layout/fragment_circuit_profile">
    </fragment>
</navigation>