<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_track"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:scaleType="centerCrop"
        android:src="@drawable/myphoto"
        app:shapeAppearanceOverlay="@style/Circular"
        app:layout_constraintBottom_toTopOf="@+id/moreInfoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181"
/>

    <TextView
        android:id="@+id/text_nama_lengkap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_track"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/creator_name"
        app:layout_constraintBottom_toTopOf="@+id/moreInfoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_track"
        app:layout_constraintVertical_bias="0.06"
        tools:text="Nama Lengkap"/>

    <TextView
        android:id="@+id/text_NIM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/image_track"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/creator_NIM"
        app:layout_constraintBottom_toTopOf="@+id/moreInfoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_prodi"
        app:layout_constraintVertical_bias="0.028"
        tools:text="NIM" />

    <TextView
        android:id="@+id/text_check_out_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@id/image_track"
        android:gravity="center"
        android:text="@string/briefDesc"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/moreInfoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_email"
        app:layout_constraintVertical_bias="1.0"
        tools:text="Check out my LinkTree!" />

    <TextView
        android:id="@+id/text_universitas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_track"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/creator_univ"
        app:layout_constraintBottom_toTopOf="@+id/moreInfoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_fakultas"
        app:layout_constraintVertical_bias="0.118"
        tools:text="Universitas" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_track"
        android:gravity="center"
        android:text="@string/creator_email"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/moreInfoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_universitas"
        app:layout_constraintVertical_bias="0.152"
        tools:text="Email" />

    <TextView
        android:id="@+id/text_fakultas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_track"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/creator_fakultas"
        app:layout_constraintBottom_toTopOf="@+id/moreInfoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_NIM"
        app:layout_constraintVertical_bias="0.09"
        tools:text="Fakultas" />

    <TextView
        android:id="@+id/text_prodi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_track"
        android:gravity="center"
        android:text="@string/creator_prodi"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/moreInfoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nama_lengkap"
        app:layout_constraintVertical_bias="0.093"
        tools:text="Prodi, Angkatan" />

    <Button
        android:id="@+id/moreInfoBtn"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:autoSizeTextType="none"
        android:textAllCaps="false"
        android:text="@string/more_info_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.781"
        tools:text="@string/more_info_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>